# vector

./: Cargo.toml
.github/workflows/: cli.yml  component_features.yml  create_preview_sites.yml  cross.yml  deny.yml  environment.yml  install-sh.yml  integration-comment.yml  integration-test.yml  integration.yml  k8s_e2e.yml  misc.yml  protobuf.yml  publish.yml  regression.yml  spelling.yml  unit_mac.yml  unit_windows.yml  workload_checks.yml
lib/codecs/: Cargo.toml
lib/dnsmsg-parser/: Cargo.toml
lib/docs-renderer/: Cargo.toml
lib/enrichment/: Cargo.toml
lib/fakedata/: Cargo.toml
lib/file-source/: Cargo.toml
lib/k8s-e2e-tests/: Cargo.toml
lib/k8s-test-framework/: Cargo.toml
lib/loki-logproto/: Cargo.toml
lib/opentelemetry-proto/: Cargo.toml
lib/prometheus-parser/: Cargo.toml
lib/vector-api-client/: Cargo.toml
lib/vector-buffers/: Cargo.toml
lib/vector-common/: Cargo.toml
lib/vector-config/: Cargo.toml
lib/vector-config-common/: Cargo.toml
lib/vector-config-macros/: Cargo.toml
lib/vector-core/: Cargo.toml
lib/vector-lookup/: Cargo.toml
lib/vector-stream/: Cargo.toml
lib/vector-vrl/cli/: Cargo.toml
lib/vector-vrl/tests/: Cargo.toml
lib/vector-vrl/web-playground/: Cargo.toml
scripts/: release-commit.rb
vdev/: Cargo.toml
