[package]
name = "vdev"
version = "0.1.0"
edition = "2021"
authors = ["Vector Contributors <vector@datadoghq.com>"]
license = "MPL-2.0"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1.0.86"
cached = "0.52.0"
chrono = { version = "0.4.39", default-features = false, features = ["serde", "clock"] }
clap = { version = "4.5.13", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.13"
confy = "0.6.1"
directories = "5.0.1"
# remove this when stabilized https://doc.rust-lang.org/stable/std/path/fn.absolute.html
dunce = "1.0.4"
glob = { version = "0.3.2", default-features = false }
hex = "0.4.3"
indexmap = { version = "2.0", default-features = false, features = ["serde", "std"] }
indicatif = { version = "0.17.11", features = ["improved_unicode"] }
itertools = "0.14.0"
log = "0.4.25"
once_cell = "1.20"
os_info = { version = "3.9.2", default-features = false }
# watch https://github.com/epage/anstyle for official interop with Clap
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
paste = "1.0.15"
regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.112"
serde_yaml = "0.9.30"
sha2 = "0.10.8"
tempfile = "3.16.0"
toml = { version = "0.8.14", default-features = false, features = ["parse"] }
