[package]
name = "prometheus-parser"
version = "0.1.0"
authors = ["Vector Contributors <vector@datadoghq.com>", "Duy Do <juchiast@gmail.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.1.0"
nom = "8.0.0"
num_enum = "0.7.2"
prost = "0.13"
prost-types = "0.13"
snafu = { version = "0.8" }
vector-common = { path = "../vector-common", features = ["btreemap"] }

[build-dependencies]
prost-build = "0.13"
